--- a/apps/fast-metro/app/src/data/langs/ar.json
+++ b/apps/fast-metro/app/src/data/langs/ar.json
@@ -110,41 +110,38 @@
   },
   "metro-schedules-screen": {
     "title": "مواعيد المترو",
-    "collapse-data": {
-      "header": {
-        "title": "{{choseLine}}",
-        "subtitle": "الوقت الكلي : {{time}} دقيقة",
-        "right-subtitle": "{{name}} - {{name}}"
+    "line-1": "الخط 1",
+    "line-2": "الخط 2",
+    "line-3": "الخط 3",
+    "header": {
+      "total-time": "الوقت الكلي",
+      "minute": "دقيقة"
+    },
+    "body": {
+      "first-transfer": {
+        "title": "الرحلة الاولي",
+        "subtitle": "تبدأ من {{time}} صباحاً"
       },
-      "body": {
-        "first-transfer": {
-          "title": "الرحلة الاولي",
-          "subtitle": "تبدأ من {{time}} صباحاً"
-        },
-        "last-transfer": {
-          "title": "الرحلة الاخيرة",
-          "subtitle": "تنتهي في  {{time}} صباحاً"
-        },
-        "time-between-stations-peek-time": {
-          "title": "الوقت بين المحطات(وقت الذروة)",
-          "subtitle": "{{time}}{{timebysec}}"
-        },
-        "time-between-stations-non-peek-time": {
-          "title": "الوقت بين المحطات(غير وقت الذروة)",
-          "subtitle": "{{time}}{{timebysec}}"
-        },
-        "number-trains": {
-          "title": "عدد القطارات",
-          "regular-ventilation": {
-            "title": "التهوية العادية",
-            "number": "{{number}}"
-          },
-          "air-conditioned": {
-            "title": "مكيف الهواء",
-            "number": "{{number}}"
-          }
-        }
-      }
+      "last-transfer": {
+        "title": "الرحلة الاخيرة",
+        "subtitle": "تنتهي في  {{time}} صباحاً"
+      },
+      "time-between-stations-peek-time": {
+        "title": "الوقت بين المحطات (وقت الذروة)",
+        "subtitle": "{{time}}{{timebysec}}"
+      },
+      "time-between-stations-non-peek-time": {
+        "title": "الوقت بين المحطات (غير وقت الذروة)",
+        "subtitle": "{{time}}{{timebysec}}"
+      },
+      "number-trains": {
+        "title": "عدد القطارات",
+        "regular-ventilation": "تهوية عادية",
+        "air-conditioned": "مُكيف"
+      },
+      "starts-from": "تبدأ من",
+      "ends-from": "تنتهي في",
+      "second": "ثانية"
     }
   },
   "get-started-screen": {
@@ -153,15 +150,9 @@
     "slide-3": "هذا النص هو نص بديل لوصف ميزة مهمة موجودة في التطبيق.",
     "finish-button": "أبدأ الآن"
   },
-  "closet-transit-screen": {
+  "closest-transit-screen": {
     "title": "اقرب محطة تبادلية",
-    "from-to": {
-      "from": "من",
-      "from-holder": "أختار المحطة"
-    },
-    "stations-number": "عدد المحطات {{number}}",
-    "ticket-price": "سعر التذكرة : {{number}} جنية",
-    "elderly": "كبار السن : {{number}} جنية"
+    "closest-transit-station-is": "أقرب محطة تبادلية هي"
   },
   "contact-us-screen": {
     "title": "تواصل معنا",
@@ -184,36 +175,26 @@
   "station-services-screen": {
     "title": "خدمات المحطات",
     "services-by-station": "أبحث بواسطة المحطة",
-    "Search-for-Services": "أبحث بواسطةالخدمة"
+    "search-for-services": "أبحث بواسطة الخدمة"
+  },
+  "search-for-services-screen": {
+    "title": "أبحث بواسطة الخدمة",
+    "select-station": "اختر محطة"
+  },
+  "services-by-station-screen": {
+    "title": "أبحث بواسطة المحطة"
   },
   "see-all-stations-screen": {
     "title": "محطات الرحلة"
   },
   "transit-stations-screen": {
-    "title": {
-      "title": " المحطات التبادلية",
-      "transit-one": {
-        "title": "{{transitOne}}",
-        "subtitle": "{{Line1}} - {{Line2}}"
-      },
-      "transit-two": {
-        "title": "{{transitTwo}}",
-        "subtitle": "{{Line1}} - {{Line2}}"
-      },
-      "transit-three": {
-        "title": "{{transitThree}}",
-        "subtitle": "{{Line1}} - {{Line2}}"
-      },
-      "transit-four": {
-        "title": "{{transitFour}}",
-        "subtitle": "{{Line1}} - {{Line2}}"
-      }
-    }
+    "title": " المحطات التبادلية",
+    "line": "الخط"
   },
   "safety-instructions-screen": {
-    "title": "Safety Instructions",
+    "title": "تعليمات الأمان",
     "do": {
-      "title": "Do",
+      "title": "أفعل",
       "subtitle": "ما الذي يجب فعله في المترو",
       "content": [
         "إتباع اللوحات الإرشادية والإهتمام بسماع إشعارات وتنبيهات الإذاعة الداخليه.",
@@ -231,8 +212,8 @@
       ]
     },
     "dont": {
-      "title": "Don't",
-      "subtitle": "What should you Not do on Metro",
+      "title": "لا تفعل",
+      "subtitle": "ما لا يجب فعله في المترو",
       "content": [
         "التدخين داخل المترو.",
         "حمل مواد قابلة للإشتعال أو مواد كيميائية خطره.",
@@ -250,18 +231,20 @@
       ]
     }
   },
-  "violations-fines-screen": {
+  "violations-fins-screen": {
     "title": "المخالفات و الغرامات",
-    "30": {
-      "who-collected-fines": "غرامة شرطة تحصل بمعرفة افراد شرطة المترو",
+    "30-egp-class": {
+      "title": "غرامات من فئة 30 جنية",
+      "who-can-collect-fins": "غرامة شرطة تحصل بمعرفة افراد شرطة المترو",
       "violations": [
         "التدخين داخل عربات المترو و المحطات",
         "ركوب العربات المخصصه للسيدات",
         "إلقاء المخلفات بداخل المحطات والقطارات"
       ]
     },
-    "50": {
-      "who-collected-fines": "غرامة ركاب تحصل بمعرفة افراد شركة المترو مشرفين ومفاجئين",
+    "50-egp-class": {
+      "title": "غرامات من فئة 50 جنية",
+      "who-can-collect-fins": "غرامة ركاب تحصل بمعرفة افراد شركة المترو مشرفين ومفاجئين",
       "violations": [
         "السفر بدون تذكرة.",
         "عدم استخدام التذكرة اثناء الدخول من البوابات.",
@@ -270,8 +253,9 @@
         " تجاوز المنطقة المحددة بالاشتراك."
       ]
     },
-    "100": {
-      "who-collected-fines": "غرامة شرطة تحصل بمعرفة افراد شرطة المترو",
+    "other-fins": {
+      "title": "غرامات أخرى",
+      "who-can-collect-fins": "غرامة شرطة تحصل بمعرفة افراد شرطة المترو",
       "violations": [
         "مزاولة البيع بالمحطات والقطارات بدون تصريح.",
         "التسول بالمحطات والقطارات.",
@@ -293,5 +277,15 @@
       "وذلك حتى لا تتعرض للغرامة المقررة لكل بند",
       "لمترو مشروع حضارى ملك لك فحافظ عليه"
     ]
+  },
+  "stations": {
+    "ain shams": "عين شمس",
+    "helwan": "حلوان",
+    "el-marg": "المرج",
+    "sadat": "السادات",
+    "nasser": "جمال عبد الناصر",
+    "al-shohadaa": "الشهداء",
+    "attaba": "العتبة",
+    "cairo-university": "جامعة القاهرة"
   }
 }
