Add data of line schedules in Metro Schedule Screen
Changes to be committed:
	modified:   apps/fast-metro/app/src/components/shared/LineDetails/LineDetails.tsx
	modified:   apps/fast-metro/app/src/data/langs/ar.json
	modified:   apps/fast-metro/app/src/data/langs/en.json

--- a/apps/fast-metro/app/src/data/langs/ar.json
+++ b/apps/fast-metro/app/src/data/langs/ar.json
@@ -286,6 +286,9 @@
     "nasser": "جمال عبد الناصر",
     "al-shohadaa": "الشهداء",
     "attaba": "العتبة",
+    "shubra-el-kheima": "شبرا الخيمة",
+    "el-mounib": "المنيب",
+    "adly_mansour": "عدلي منصور",
     "cairo-university": "جامعة القاهرة"
   }
 }
