--- a/apps/fast-metro/app/src/data/langs/en.json
+++ b/apps/fast-metro/app/src/data/langs/en.json
@@ -279,6 +279,9 @@
     "nasser": "Nasser",
     "al-shohadaa": "Al Shohadaa",
     "attaba": "Attaba",
+    "shubra-el-kheima": "Shubra El Kheima",
+    "el-mounib": "El Mounib",
+    "adly_mansour": "Adly Mansour",
     "cairo-university": "Cairo University"
   }
 }
