feat: add clear cache functionality
Changes to be committed:
	modified:   apps/fast-metro/app/src/components/shared/Alert/Alert.tsx
	modified:   apps/fast-metro/app/src/data/langs/ar.json
	modified:   apps/fast-metro/app/src/data/langs/en.json
	modified:   apps/fast-metro/app/src/screens/SettingsScreen/SettingsScreen.tsx

--- a/apps/fast-metro/app/src/data/langs/ar.json
+++ b/apps/fast-metro/app/src/data/langs/ar.json
@@ -30,6 +30,9 @@
   },
   "settings-screen": {
     "title": "الإعدادات",
+    "yes": "نعم",
+    "reset-confirmation-message": "هل أنت متأكد من أنك تريد حذف كل بيانات التطبيق؟",
+    "clear-settings-confirmation-message": "هل أنت متأكد من أنك تريد حذف كل الإعدادات الموجودة؟",
     "languages": {
       "title": "اللغة",
       "subtitle": "غير لغة التطبيق",
