--- a/apps/fast-metro/app/src/data/langs/en.json
+++ b/apps/fast-metro/app/src/data/langs/en.json
@@ -91,7 +91,8 @@
     }
   },
   "start-trip-screen": {
-    "title": "start trip"
+    "title": "start trip",
+    "egp": "EGP"
   },
   "stations-selector": {
     "from": "From",
@@ -181,7 +182,8 @@
     "title": "Services by Station"
   },
   "see-all-stations-screen": {
-    "title": "Trip Stations"
+    "title": "Trip Stations",
+    "change-to-line": "Change to Line"
   },
   "transit-stations-screen": {
     "title": " Transit Stations",
@@ -275,9 +277,11 @@
     ]
   },
   "subscriptions-screen": {
-    "title": "Subscription Prices",
+    "title": "Subscription Information",
     "prices": "Prices",
-    "subscription-offices": "Subscription Offices"
+    "subscription-offices": "Subscription Offices",
+    "quarterly-subscription-offices": "Quarterly Subscription Offices",
+    "annual-subscription-offices": "Annual Subscription Offices"
   },
   "tickets-prices-screen": {
     "title": "Tickets Prices",
@@ -395,16 +399,91 @@
     }
   },
   "stations": {
-    "ain shams": "Ain Shams",
     "helwan": "Helwan",
-    "el-marg": "El Marg",
+    "ain-helwan": "Ain Helwan",
+    "helwan-university": "Helwan University",
+    "wadi-hof": "Wadi Hof",
+    "hadayek-helwan": "Hadayek Helwan",
+    "el-maasara": "El Maasara",
+    "tora-el-asmant": "Tora El Asmant",
+    "kozzika": "Kozzika",
+    "tora-el-balad": "Tora El Balad",
+    "sakanat-el-maadi": "Sakanat El Maadi",
+    "maadi": "Maadi",
+    "hadayek-el-maadi": "Hadayek El Maadi",
+    "dar-el-salam": "Dar El Salam",
+    "el-zahraa": "El Zahraa",
+    "mar-girgis": "Mar Girgis",
+    "el-malek-el-saleh": "El Malek El Saleh",
+    "al-sayeda-zeinab": "Al Sayeda Zeinab",
+    "saad-zaghloul": "Saad Zaghloul",
     "sadat": "Sadat",
     "nasser": "Nasser",
+    "orabi": "Orabi",
     "al-shohadaa": "Al Shohadaa",
-    "attaba": "Attaba",
-    "shubra-el-kheima": "Shubra El Kheima",
+    "ghamra": "Ghamra",
+    "el-demerdash": "El Demerdash",
+    "manshiet-el-sadr": "Manshiet El Sadr",
+    "kobri-el-qobba": "Kobri El Qobba",
+    "hammamat-el-qobba": "Hammamat El Qobba",
+    "saray-el-qobba": "Saray El Qobba",
+    "hadayeq-el-zaitoun": "Hadayeq El Zaitoun",
+    "helmeyet-el-zaitoun": "Helmeyet El Zaitoun",
+    "el-matareyya": "El Matareyya",
+    "ain-shams": "Ain Shams",
+    "ezbet-el-nakhl": "Ezbet El Nakhl",
+    "el-marg": "El Marg",
+    "new-el-marg": "New El Marg",
     "el-mounib": "El Mounib",
-    "adly_mansour": "Adly Mansour",
+    "sakiat-mekky": "Sakiat Mekky",
+    "omm-el-masryeen": "Omm El Masryeen",
+    "el-giza": "El Giza",
+    "faisal": "Faisal",
+    "el-bohoth": "El Bohoth",
+    "dokki": "Dokki",
+    "opera": "Opera",
+    "mohamed-naguib": "Mohamed Naguib",
+    "masarra": "Masarra",
+    "road-el-farag": "Road El Farag",
+    "st-teresa": "St Teresa",
+    "khalafawy": "Khalafawy",
+    "mezallat": "Mezallat",
+    "kolleyyet-el-zeraa": "Kolleyyet El Zeraa",
+    "shubra-el-kheima": "Shubra El Kheima",
+    "airport": "Airport",
+    "ahmed-galal": "Ahmed Galal",
+    "adly-mansour": "Adly Mansour",
+    "el-haykestep": "El Haykestep",
+    "omar-ibn-el-khattab": "Omar Ibn El Khattab",
+    "qobaa": "Qobaa",
+    "hesham-barakat": "Hesham Barakat",
+    "el-nozha": "El Nozha",
+    "nadi-el-shams": "Nadi El Shams",
+    "alf-maskan": "Alf Maskan",
+    "heliopolis": "Heliopolis",
+    "haroun": "Haroun",
+    "al-ahram": "Al Ahram",
+    "koleyet-el-banat": "Koleyet El Banat",
+    "stadium": "Stadium",
+    "fair-zone": "Fair Zone",
+    "abbassia": "Abbassia",
+    "abdou-pasha": "Abdou Pasha",
+    "el-geish": "El Geish",
+    "bab-el-shaaria": "Bab El Shaaria",
+    "attaba": "Attaba",
+    "maspero": "Maspero",
+    "zamalek": "Zamalek",
+    "kit-kat": "Kit Kat",
+    "sudan-street": "Sudan Street",
+    "imbaba": "Imbaba",
+    "el-bohy": "El Bohy",
+    "el-kawmeya-al-arabiya": "El Kawmeya Al Arabiya",
+    "ring-road": "Ring Road",
+    "rod-el-farag-axis": "Rod El Farag Axis",
+    "el-tawfikeya": "El Tawfikeya",
+    "wadi-el-nil": "Wadi El Nil",
+    "gamaat-el-dowal-al-arabiya": "Gamaat El Dowal Al Arabiya",
+    "bulaq-el-dakroor": "Bulaq El Dakroor",
     "cairo-university": "Cairo University"
   }
 }
