fix: rename some stations in langs file

--- a/apps/fast-metro/app/src/data/langs/ar.json
+++ b/apps/fast-metro/app/src/data/langs/ar.json
@@ -425,7 +425,7 @@
     "al-sayeda-zeinab": "السيدة زينب",
     "saad-zaghloul": "سعد زغلول",
     "sadat": "السادات",
-    "nasser": "ناصر",
+    "nasser": "جمال عبد ناصر",
     "orabi": "عرابي",
     "al-shohadaa": "الشهداء",
     "ghamra": "غمرة",
@@ -440,7 +440,7 @@
     "ain-shams": "عين شمس",
     "ezbet-el-nakhl": "عزبة النخل",
     "el-marg": "المرج",
-    "new-el-marg": "نيو المرج",
+    "new-el-marg": "المرج الجديدة",
     "el-mounib": "المنيب",
     "sakiat-mekky": "ساقية مكي",
     "omm-el-masryeen": "ام المصريين",
@@ -483,7 +483,7 @@
     "kit-kat": "كت كات",
     "sudan-street": "شارع السودان",
     "imbaba": "إمبابة",
-    "el-bohy": "البوحي",
+    "el-bohy": "البوهي",
     "el-kawmeya-al-arabiya": "القومية العربية",
     "ring-road": "الطريق الدائري",
     "rod-el-farag-axis": "محور روض الفرج",
