fix: back button in Subscription Screen was small on small screens (e.g. 320x480)
The screen title was very large, so the icon shrinks to fit the screen.
I renamed the screen to make the title smaller>

Changes to be committed:
	modified:   apps/true-metro/app/src/data/langs/ar.json
	modified:   apps/true-metro/app/src/data/langs/en.json
	modified:   apps/true-metro/app/src/screens/SubscriptionScreen/TicketsPricesScreen.tsx

--- a/apps/true-metro/app/src/data/langs/ar.json
+++ b/apps/true-metro/app/src/data/langs/ar.json
@@ -8,7 +8,7 @@
     "metro-schedules": "جدول المترو",
     "violations-and-fines": "المخالفات والغرامات",
     "closest-transit": "أقرب محطة تبادلية",
-    "subscription-information": "معلومات الإشتراك"
+    "subscription-information": "الإشتراكات والأسعار"
   },
   "bottom-nav": {
     "map": "الخريطة",
@@ -284,7 +284,7 @@
     ]
   },
   "subscriptions-screen": {
-    "title": "معلومات الإشتراك",
+    "title": "الإشتراكات والأسعار",
     "prices": "الأسعار",
     "subscription-offices": "مكاتب الإشتراكات",
     "quarterly-subscription-offices": "مكاتب الإشتراكات الربع سنوية",
