alert lang added

--- a/apps/true-metro/app/src/data/langs/ar.json
+++ b/apps/true-metro/app/src/data/langs/ar.json
@@ -492,5 +492,9 @@
     "gamaat-el-dowal-al-arabiya": "جامعة الدول العربية",
     "bulaq-el-dakroor": "بولاق الدكرور",
     "cairo-university": "جامعة القاهرة"
+  },
+  "update-alert":{
+    "message": "يوجد نسخة جديدة من التطبيق، قد تحتوي على بيانات أحدث، هل تريد التحديث؟",
+    "btn":"تحديث"
   }
 }
