rename fast metro app to True Metro

--- a/apps/true-metro/app/src/data/langs/ar.json
+++ b/apps/true-metro/app/src/data/langs/ar.json
@@ -149,10 +149,10 @@
     }
   },
   "get-started-screen": {
-    "slide-1": "هذا النص هو نص بديل لوصف ميزة مهمة موجودة في التطبيق.",
-    "slide-2": "هذا النص هو نص بديل لوصف ميزة مهمة موجودة في التطبيق.",
-    "slide-3": "هذا النص هو نص بديل لوصف ميزة مهمة موجودة في التطبيق.",
-    "finish-button": "أبدأ الآن"
+    "slide-1": "ادوات تساعد في رحلتك مثل معرفه اقرب محطة تبادلية و اماكن مكاتب الاشتراكات والعديد من المميزات",
+    "slide-2": "حدد وجهة رحلتك لتعرف عدد المحطات وسعر التذكرة",
+    "slide-3": "أعرف خط سيرك والمحطات التبادلية في رحلتك",
+    "finish-button": "أبدأ رحلتك الآن"
   },
   "closest-transit-screen": {
     "title": "اقرب محطة تبادلية",
@@ -160,7 +160,7 @@
   },
   "contact-us-screen": {
     "title": "تواصل معنا",
-    "app-name": "تطبيق فاست مترو",
+    "app-name": "تطبيق ترو مترو",
     "contact-form": {
       "name": "الاسم",
       "email": "البريد الإلكتروني",
@@ -169,7 +169,7 @@
   },
   "about-us-screen": {
     "title": "عنا",
-    "app-name": "تطبيق فاست مترو",
+    "app-name": "تطبيق ترو مترو",
     "version": "الإصدار"
   },
   "contact-metro-screen": {
