--- a/apps/true-metro/app/src/data/langs/ar.json
+++ b/apps/true-metro/app/src/data/langs/ar.json
@@ -149,7 +149,7 @@
     }
   },
   "get-started-screen": {
-    "slide-1": "ادوات تساعد في رحلتك مثل معرفه اقرب محطة تبادلية و اماكن مكاتب الاشتراكات والعديد من المميزات",
+    "slide-1": "أدوات تساعد في رحلتك مثل معرفة أقرب محطة تبادلية وأماكن مكاتب الإشتراكات والعديد من المميزات",
     "slide-2": "حدد وجهة رحلتك لتعرف عدد المحطات وسعر التذكرة",
     "slide-3": "أعرف خط سيرك والمحطات التبادلية في رحلتك",
     "finish-button": "أبدأ رحلتك الآن"
