finish btn in get started screen

--- a/apps/true-metro/app/src/data/langs/en.json
+++ b/apps/true-metro/app/src/data/langs/en.json
@@ -145,7 +145,7 @@
     "slide-1": "Tools that help in your trip, such as knowing the nearest transit station, subscription offices, and many more features",
     "slide-2": "Select your trip destination to know the number of stations and ticket price",
     "slide-3": "Know your itinerary and transit stations on your trip",
-    "finish-button": "Get Started"
+    "finish-button": "START YOUR TRIP"
   },
   "closest-transit-screen": {
     "title": "Closet Transit",
