--- a/apps/true-metro/app/src/data/langs/en.json
+++ b/apps/true-metro/app/src/data/langs/en.json
@@ -142,7 +142,7 @@
     }
   },
   "get-started-screen": {
-    "slide-1": "Tools that help in your trip, such as knowing the nearest transit station, subscription offices, and many more features",
+    "slide-1": "Lots of tools to help your journey on the metro.",
     "slide-2": "Select your trip destination to know the number of stations and ticket price",
     "slide-3": "Know your itinerary and transit stations on your trip",
     "finish-button": "START YOUR TRIP"
