change some titles in ticket price section

--- a/apps/true-metro/app/src/data/langs/ar.json
+++ b/apps/true-metro/app/src/data/langs/ar.json
@@ -299,7 +299,7 @@
       ]
     },
     "special-needs": {
-      "title": "ذوي الإحتياجات الخاصة",
+      "title": "ذوي الهمم",
       "prices": [
         "0.5 جنية (تذكرة لـ 39 محطة)"
       ]
@@ -313,7 +313,7 @@
       ]
     },
     "students": {
-      "title": "الطلاب (11 سنة إلى 18 سنة)",
+      "title": "الطلاب",
       "prices": [
         "5 جنية (تذكرة لـ 9 محطات)",
         "7 جنية (تذكرة لـ 16 محطة)",
@@ -321,15 +321,7 @@
       ]
     },
     "elderly-from-60": {
-      "title": "كبار السن (60 سنة إلى 65 سنة)",
-      "prices": [
-        "2.5 جنية (تذكرة لـ 9 محطات)",
-        "3.5 جنية (تذكرة لـ 16 محطة)",
-        "5 جنية (تذكرة لـ 39 محطة)"
-      ]
-    },
-    "elderly-older-than-70": {
-      "title": "كبار السن (أكبر من 70 سنة)",
+      "title": "كبار السن (من 60 سنة)",
       "prices": [
         "2.5 جنية (تذكرة لـ 9 محطات)",
         "3.5 جنية (تذكرة لـ 16 محطة)",
@@ -343,13 +335,13 @@
       "title": "ذوي الإحتياجات الخاصة",
       "prices": [
         {
-          "subscription-type": "إشتراك لـ 3 شهور",
+          "subs cription-type": "إشتراك لـ 3 شهور",
           "price": "22 جنية (صالحة لـ 180 رحلة)"
         }
       ]
     },
     "public": {
-      "title": "العامة (4 سنة إلى 60 سنوات)",
+      "title": "العامة",
       "prices": [
         {
           "subscription-type": "إشتراك شهر واحد",
