--- a/apps/true-metro/app/src/data/langs/en.json
+++ b/apps/true-metro/app/src/data/langs/en.json
@@ -314,7 +314,7 @@
       ]
     },
     "elderly-from-60": {
-      "title": "Elderly (60 Years to 65 Years)",
+      "title": "Elderly (From 60 Years)",
       "prices": [
         "2.5 EGP (9 Stations Ticket)",
         "3.5 EGP (16 Stations Ticket)",
